--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
     font-family: monospace;
     margin-top: 0%;
 }
+
 .topNav {
     background:lightgray;
     text-align: center;
@@ -19,15 +20,33 @@ h1 {
     text-align: center;
 }
 
-.divBall {
+#box {
     text-align: center;
-    background: white;
     margin: 0 auto;
-    height: 600px;
+    height: 300px;
     width: 600px;
 }
+
+a img { display:none; }
+a:hover img { 
+    display:block;
+    margin: 0 auto;     
+}
+
+div#bruno {
+    content:url(bruno-fernandes-slide.png);
+    width: 200px;
+    height: 250px;
+ }​
+
 
 
 .divTwo {
     text-align: center;
+}
+
+#webLogos {
+    content:url(html-css-js.png);
+    margin: 0 auto;
+    padding: 15px;
 }
