upgraded some texts and fonts

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
 
 .topNav {
     background:lightgray;
-    text-align: center;
+    text-align: left;
     font-size: 25px;    
     float: middle;
     margin: 0 auto;
